# afk-intelligence

./: .gitignore  .pre-commit-config.yaml  Makefile  README.md  docker-compose.yml  requirements.txt  streak.txt
backend/: Dockerfile  main.py  mock_server.py  pyproject.toml  requirements.txt
backend/agents/: intent.py  orchestrator.py  reflection.py
backend/agents/specialized/: team.py
backend/api/: auth.py  chat.py  execution.py  workspace.py
backend/audit/: __init__.py  logger.py
backend/config/: settings.py
backend/context/: compression.py
backend/database/: mongodb.py
backend/events/: __init__.py  logger.py
backend/execution/: diff.py  manager.py  risk.py  snapshots.py
backend/memory/: manager.py
backend/planning/: manager.py
backend/services/: ollama_service.py
backend/src/: main.py
backend/src/core/: config.py  database.py
backend/src/modules/chat/: presentation.py
backend/src/modules/context/domain/: entities.py
backend/src/modules/context/services/: architecture.py  assembler.py  embeddings.py  graph_service.py  indexer.py  retrieval.py
backend/src/modules/modification/: presentation.py
backend/src/modules/orchestration/: loop.py  presentation.py
backend/src/modules/tools/: registry.py
backend/src/shared/: ollama_client.py  redis_pubsub.py
backend/src/workers/: celery_app.py  tasks.py
backend/tests/: test_core.py  test_extended.py
backend/tools/: registry.py  terminal.py
backend/workspace/: chunking.py  retrieval.py  scanner.py
backend/workspace/graph/: extractor.py  summarizer.py  traversal.py
docs/: agents.md  (+9 more)
(+62 files in other folders)
